# cmakefmt

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  update-samples.sh
experiments/comma-behaviour/: CMakeLists.txt  README.md
samples/: bracket-comment-with-delimiter.output.cmake  bracket-comment.input.cmake  escaping-dollar.output.cmake  function.input.cmake  function.output.cmake  juce.input.cmake  juce.output.cmake  long-comments.input.cmake  long-comments.output.cmake  macro.input.cmake  macro.output.cmake  multiline-command.input.cmake  multiline-command.output.cmake  nested.input.cmake  opencv.input.cmake  opencv.output.cmake  skia-output.txt  skia.input.cmake  skia.output.cmake  sodium.cmake  sodium.output.cmake  test.input.cmake
smoketest/: count-failures.mjs  script.mjs
src/: errors.rs  lib.rs  main.rs  options.rs  run.rs  writer.rs
src/parser/: mod.rs  parse_condition.rs  strings.rs  test.rs  types.rs
src/pretty_printer/: mod.rs  test.rs
